terraform/modules/networking/main.tf
resource "aws_vpc" "main" {

  cidr_block = var.vpc_cidr


  enable_dns_support = true

  enable_dns_hostnames = true


  tags = {

    Name = "${var.project_name}-${var.environment}-vpc"

  }

}

resource "aws_subnet" "public" {

  count = length(var.availability_zones)


  vpc_id = aws_vpc.main.id


  cidr_block = cidrsubnet(
    var.vpc_cidr,
    8,
    count.index
  )


  availability_zone = var.availability_zones[count.index]


  map_public_ip_on_launch = true


  tags = {

    Name = "${var.project_name}-${var.environment}-public-${count.index + 1}"

  }

}

resource "aws_subnet" "private" {

  count = length(var.availability_zones)


  vpc_id = aws_vpc.main.id


  cidr_block = cidrsubnet(
    var.vpc_cidr,
    8,
    count.index + 10
  )


  availability_zone = var.availability_zones[count.index]


  tags = {

    Name = "${var.project_name}-${var.environment}-private-${count.index + 1}"

  }

}

resource "aws_internet_gateway" "main" {

  vpc_id = aws_vpc.main.id


  tags = {

    Name = "${var.project_name}-igw"

  }

}

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.main.id

  }


  tags = {

    Name = "${var.project_name}-public-route"

  }

}

resource "aws_route_table_association" "public" {

  count = length(var.availability_zones)


  subnet_id = aws_subnet.public[count.index].id


  route_table_id = aws_route_table.public.id

}

resource "aws_eip" "nat" {

  domain = "vpc"

}

resource "aws_nat_gateway" "main" {

  allocation_id = aws_eip.nat.id


  subnet_id = aws_subnet.public[0].id


  tags = {

    Name = "${var.project_name}-nat"

  }


  depends_on = [

    aws_internet_gateway.main

  ]

}

resource "aws_route_table" "private" {

  vpc_id = aws_vpc.main.id


  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = aws_nat_gateway.main.id

  }


  tags = {

    Name = "${var.project_name}-private-route"

  }

}

resource "aws_route_table_association" "private" {

  count = length(var.availability_zones)


  subnet_id = aws_subnet.private[count.index].id


  route_table_id = aws_route_table.private.id

}
